--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 
   <div class="container-fluid p-5 pt-6 bg-white text-white text-center border-bottom">
-    <h1>Workshop on Group Actions on Discrete Objects</h1>
+    <h1>Workshop on Group Actions on Discrete Structures</h1>
   </div>
 
   <div class="container mt-5">
@@ -21,39 +21,37 @@
       <div class="col-sm-4 cardmy">
         <i class="fas fa-map-marker-alt fa-3x mb-3"></i>
         <h3>Where:</h3>
-        <p>Kranjska Gora, <a> href="https://www.hit-alpinea.si/en/accommodation/ramada-resort-kranjska-gora/"Hotel Ramada</a>.</p>
+        <p>Kranjska Gora, <a href="https://www.hit-alpinea.si/en/accommodation/ramada-resort-kranjska-gora/"Hotel Ramada</a>.</p>
       </div>
       <div class="col-sm-4 cardmy big">
         <i class="far fa-clock fa-3x mb-3"></i>
         <h3>When:</h3>
-        <p>Deserunt laboris ex sint.</p>
+        <p>17th -- 21st June, 2024.</p>
       </div>
       <div class="col-sm-4 cardmy">
         <i class="fas fa-users fa-3x mb-3"></i>
-        <h3>Who:</h3>
-        <p>Elit incididunt consectetur nulla et commodo amet velit labore.</p>
+        <h3>Organised by:</h3>
+        <p> Marston Conder and Primož Potočnik</p>
+        <p> Financially supported by ARIS, project no. N1 0296</p>
       </div>
     </div>
 
     <div id="about">
       <h2>About</h2>
-      <p>
-        Ut fugiat nulla veniam anim. Esse eu id exercitation exercitation enim. Excepteur sint id culpa consectetur est ut magna esse est esse. Ea velit excepteur sit. Irure aliquip non elit dolor culpa sint sunt laboris laborum. Est veniam do laboris consectetur ad velit mollit amet enim exercitation non pariatur. Aute consequat consectetur occaecat do. Quis ut proident esse eu cupidatat.
-  
-        Et pariatur aliqua deserunt ea occaecat ex. Minim cupidatat nulla nisi commodo officia incididunt. Irure sunt Lorem enim est elit Lorem aliquip irure quis. Adipisicing adipisicing ea incididunt quis qui nostrud laboris exercitation quis incididunt in duis. Do enim aliqua tempor. Anim proident tempor commodo dolor labore aliquip voluptate velit pariatur irure non id anim. Ex dolore ex voluptate ea magna. Veniam proident ipsum ex dolore ad irure et ut aliquip in dolor consectetur.
-        
-        Voluptate proident sint aliquip irure. Dolor eiusmod quis magna ut Lorem laboris voluptate exercitation nulla. Id ea ea velit ipsum deserunt reprehenderit reprehenderit laboris. Amet aute amet ut ullamco cillum duis nostrud. Id exercitation labore eiusmod sint sit est consequat est do. Officia nulla veniam adipisicing magna tempor aute ex deserunt ut elit dolor.
+      <p> The topic of the workshop is various aspects of group theory in connection with actions on discrete structures. 
+          This theme is intended to include permutation groups as well as automorphism groups of graphs, maps and polytopes. 
+           We plan for the workshop to run in a similar style to workshops at Banff, Oaxaca and Oberwolfach, 
+           with a small number of lectures but considerable focus on open problems and questions.             
       </p>
     </div>
 
     <div id="participants">
       <h2>Participants</h2>
       <p>
-        Ut fugiat nulla veniam anim. Esse eu id exercitation exercitation enim. Excepteur sint id culpa consectetur est ut magna esse est esse. Ea velit excepteur sit. Irure aliquip non elit dolor culpa sint sunt laboris laborum. Est veniam do laboris consectetur ad velit mollit amet enim exercitation non pariatur. Aute consequat consectetur occaecat do. Quis ut proident esse eu cupidatat.
-  
-        Et pariatur aliqua deserunt ea occaecat ex. Minim cupidatat nulla nisi commodo officia incididunt. Irure sunt Lorem enim est elit Lorem aliquip irure quis. Adipisicing adipisicing ea incididunt quis qui nostrud laboris exercitation quis incididunt in duis. Do enim aliqua tempor. Anim proident tempor commodo dolor labore aliquip voluptate velit pariatur irure non id anim. Ex dolore ex voluptate ea magna. Veniam proident ipsum ex dolore ad irure et ut aliquip in dolor consectetur.
-        
-        Voluptate proident sint aliquip irure. Dolor eiusmod quis magna ut Lorem laboris voluptate exercitation nulla. Id ea ea velit ipsum deserunt reprehenderit reprehenderit laboris. Amet aute amet ut ullamco cillum duis nostrud. Id exercitation labore eiusmod sint sit est consequat est do. Officia nulla veniam adipisicing magna tempor aute ex deserunt ut elit dolor.
+        Due to budget limitations, this is an invitation only event. So far, the following participants have confirmed attendance:
+        Binzhou Xia, Djordje Mitrović, Isabel Hubard, Jozef Širáň, Luke Morgan, Marco Barbieri, Mima Stanojkovski, Pablo Spiga,
+        Robert Jajcay, Shasha Zheng, Yanquan Feng, Dong Dong Hou, Antonio Montero, Rhys Evans, Micael Toledo, Maruša Lekše, 
+        Marston Conder and Primož Potočnik. Further likely participants are Gareth Jones, Ted Dobson and Primož Šparl.
       </p>
     </div>
   </div>
