--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div class="col-sm-4 cardmy">
         <i class="fas fa-map-marker-alt fa-3x mb-3"></i>
         <h3>Where:</h3>
-        <p>Kranjska Gora, <a href="https://www.hit-alpinea.si/en/accommodation/ramada-resort-kranjska-gora/"Hotel Ramada</a>.</p>
+        <p>Kranjska Gora, <a href="https://www.hit-alpinea.si/en/accommodation/ramada-resort-kranjska-gora/">Hotel Ramada</a>.</p>
       </div>
       <div class="col-sm-4 cardmy big">
         <i class="far fa-clock fa-3x mb-3"></i>
