--- a/index.html
+++ b/index.html
@@ -32,16 +32,18 @@
         <i class="fas fa-users fa-3x mb-3"></i>
         <h3>Organised by:</h3>
         <p> Marston Conder and Primož Potočnik</p>
-        <p> Financially supported by ARIS, project no. N1 0296</p>
+        <p> Financially supported by ARIS, project no. N1 0216</p>
       </div>
     </div>
 
     <div id="about">
       <h2>About</h2>
-      <p> The topic of the workshop is various aspects of group theory in connection with actions on discrete structures. 
+      <p> This workshop is devoted to various aspects of actions of groups on discrete structures. 
           This theme is intended to include permutation groups as well as automorphism groups of graphs, maps and polytopes. 
-           We plan for the workshop to run in a similar style to workshops at Banff, Oaxaca and Oberwolfach, 
-           with a small number of lectures but considerable focus on open problems and questions.             
+          The workshop will be held at the Ramada Resort Hotel at Kranjska Gora, Slovenia, from Monday 17 June to Friday 21 June, 
+          with people expected to arrive on Sunday 16 June and depart after lunchtime on Friday 21 June.
+          Kranjska Gora is a picturesque town in the north-west of Slovenia, close to both  
+          Austria and Italy, and quite famous as a ski resort in winter and for walking and other activities in the summer.
       </p>
     </div>
 
@@ -54,6 +56,36 @@
         Marston Conder and Primož Potočnik. Further likely participants are Gareth Jones, Ted Dobson and Primož Šparl.
       </p>
     </div>
+
+        <div id="programme">
+      <h2>Programe</h2>
+      <p>
+        We plan for the workshop to run in a similar style to workshops at Banff, Oaxaca and Oberwolfach, 
+        with a small number of lectures but considerable focus on open problems and questions. A more detailed programme
+        will be published later.
+      </p>
+    </div>
+
+       <div id="accommodation">
+      <h2>Accommodation, transport etc.</h2>
+      <p>
+        Accommodation plus breakfast and either lunch or dinner will be provided, 
+        and thanks to a generous funding of the Slovenian Research and Innovation Agency (ARIS)
+        there will be no registration fee (except possibly for a workshop dinner and/or other combined social activities).  
+        Of course if you have grant money you need to spend, you can pay for your hotel room.
+        
+        Participants will need to arrange their own travel to and from Kranjska Gora.  
+        The closest main airport is at Ljubljana, with direct flights to & from 
+        Amsterdam, Brussels, Dubai, Frankfurt, London, Munich, Paris and Zurich, for example.  
+        Ljubljana airport is 66 km from Kranjska Gora, and there are regular buses and 
+        shuttle/taxi services between it and Kranjska Gora.  For example, a ride with the 
+        "Go-Opti" shuttle service currently costs 78Euros per person one-way, but less than 
+        that if more than one person is travelling.  The closest train station is Jesenice, 
+        (on the main line between Munich and Ljubljana or Zagreb), and it takes only 24 minutes  
+        by bus from there to Kranjska Gora.
+      </p>
+    </div>
+    
   </div>
 
 </body>
