--- a/index.html
+++ b/index.html
@@ -31,7 +31,10 @@
       <div class="col-sm-4 cardmy">
         <i class="fas fa-users fa-3x mb-3"></i>
         <h3>Organised by:</h3>
-        <p> Marston Conder and Primož Potočnik</p>
+        <p> 
+        <a href="https://www.math.auckland.ac.nz/~conder/">Marston Conder<\a> and 
+        <a href="https://users.fmf.uni-lj.si/potocnik/">Primož Potočnik<\a>
+        </p>
         <p> Financially supported by ARIS, project no. N1 0216</p>
       </div>
     </div>
@@ -50,7 +53,7 @@
     <div id="participants">
       <h2>Participants</h2>
       <p>
-        Due to budget limitations, this is an invitation only event. So far, the following participants have confirmed attendance:
+        This is an invitation only event. So far, the following participants have confirmed attendance:
         Binzhou Xia, Djordje Mitrović, Isabel Hubard, Jozef Širáň, Luke Morgan, Marco Barbieri, Mima Stanojkovski, Pablo Spiga,
         Robert Jajcay, Shasha Zheng, Yanquan Feng, Dong Dong Hou, Antonio Montero, Rhys Evans, Micael Toledo, Maruša Lekše, 
         Marston Conder and Primož Potočnik. Further likely participants are Gareth Jones, Ted Dobson and Primož Šparl.
@@ -70,9 +73,10 @@
       <h2>Accommodation, transport etc.</h2>
       <p>
         Accommodation plus breakfast and either lunch or dinner will be provided, 
-        and thanks to a generous funding of the Slovenian Research and Innovation Agency (ARIS)
-        there will be no registration fee (except possibly for a workshop dinner and/or other combined social activities).  
-        Of course if you have grant money you need to spend, you can pay for your hotel room.
+        and thanks to a generous funding of the Slovenian Research and Innovation Agency (ARIS),
+        research project N1 0216, there will be no registration fee (except possibly for a workshop dinner 
+        and/or other combined social activities). Of course if you have grant money you need to spend, 
+        you can pay for your hotel room.
         
         Participants will need to arrange their own travel to and from Kranjska Gora.  
         The closest main airport is at Ljubljana, with direct flights to & from 
