--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <p>Kranjska Gora, <a href="https://www.hit-alpinea.si/en/accommodation/ramada-resort-kranjska-gora/">Hotel Ramada</a>.</p>
       </div>
       <div class="col-sm-4 cardmy big">
-        <i class="far fa-clock fa-3x mb-3"></i>
+        <i class="fas fa-clock fa-3x mb-3"></i>
         <h3>When:</h3>
         <p>17th -- 21st June, 2024.</p>
       </div>
