--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
         <i class="fas fa-users fa-3x mb-3"></i>
         <h3>Organised by:</h3>
         <p> 
-        <a href="https://www.math.auckland.ac.nz/~conder/">Marston Conder</a>a> and 
-        <a href="https://users.fmf.uni-lj.si/potocnik/">Primož Potočnik</a>a>
+        <a href="https://www.math.auckland.ac.nz/~conder/">Marston Conder</a> and 
+        <a href="https://users.fmf.uni-lj.si/potocnik/">Primož Potočnik</a>
         </p>
         <p> Financially supported by ARIS, project no. N1 0216</p>
       </div>
