--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
       <div class="col-sm-4 cardmy">
         <i class="fas fa-map-marker-alt fa-3x mb-3"></i>
         <h3>Where:</h3>
-        <p>Kranjska Gora, <a href="https://www.hit-alpinea.si/en/accommodation/ramada-resort-kranjska-gora/">Hotel Ramada</a>.</p>
+        <p>Kranjska Gora, <a href="https://www.hit-alpinea.si/en/accommodation/ramada-resort-kranjska-gora/">Hotel Ramada</a></p>
       </div>
       <div class="col-sm-4 cardmy big">
         <i class="fas fa-clock fa-3x mb-3"></i>
         <h3>When:</h3>
-        <p>17th -- 21st June, 2024.</p>
+        <p>17th -- 21st June, 2024</p>
       </div>
       <div class="col-sm-4 cardmy">
         <i class="fas fa-users fa-3x mb-3"></i>
