--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     </div>
 
         <div id="programme">
-      <h2>Programe</h2>
+      <h2>Programme</h2>
       <p>
         We plan for the workshop to run in a similar style to workshops at Banff, Oaxaca and Oberwolfach, 
         with a small number of lectures but considerable focus on open problems and questions. A more detailed programme
