Some text tweaks. -- to –, removed double spaces, 78Euros to 78 Euros

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <div class="col-sm-4 cardmy big">
         <i class="fas fa-clock fa-3x mb-3"></i>
         <h3>When:</h3>
-        <p>17th -- 21st June, 2024</p>
+        <p>17th – 21st June, 2024</p>
       </div>
       <div class="col-sm-4 cardmy">
         <i class="fas fa-users fa-3x mb-3"></i>
@@ -60,7 +60,7 @@
       </p>
     </div>
 
-        <div id="programme">
+    <div id="programme">
       <h2>Programme</h2>
       <p>
         We plan for the workshop to run in a similar style to workshops at Banff, Oaxaca and Oberwolfach, 
@@ -69,7 +69,7 @@
       </p>
     </div>
 
-       <div id="accommodation">
+    <div id="accommodation">
       <h2>Accommodation, transport etc.</h2>
       <p>
         Accommodation plus breakfast and either lunch or dinner will be provided, 
@@ -82,9 +82,9 @@
         The closest main airport is at Ljubljana, with direct flights to & from 
         Amsterdam, Brussels, Dubai, Frankfurt, London, Munich, Paris and Zurich, for example.  
         Ljubljana airport is 66 km from Kranjska Gora, and there are regular buses and 
-        shuttle/taxi services between it and Kranjska Gora.  For example, a ride with the 
-        "Go-Opti" shuttle service currently costs 78Euros per person one-way, but less than 
-        that if more than one person is travelling.  The closest train station is Jesenice, 
+        shuttle/taxi services between it and Kranjska Gora. For example, a ride with the 
+        "Go-Opti" shuttle service currently costs 78 Euros per person one-way, but less than 
+        that if more than one person is travelling. The closest train station is Jesenice, 
         (on the main line between Munich and Ljubljana or Zagreb), and it takes only 24 minutes  
         by bus from there to Kranjska Gora.
       </p>
