--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <div class="col-sm-4 cardmy big">
         <i class="fas fa-clock fa-3x mb-3"></i>
         <h3>When:</h3>
-        <p>17th – 21st June, 2024</p>
+        <p>17–21 June 2024</p>
       </div>
       <div class="col-sm-4 cardmy">
         <i class="fas fa-users fa-3x mb-3"></i>
@@ -53,7 +53,7 @@
     <div id="participants">
       <h2>Participants</h2>
       <p>
-        This is an invitation only event. So far, the following participants have confirmed attendance:
+        This is an invitation-only event. So far, the following participants have confirmed attendance:
         Binzhou Xia, Djordje Mitrović, Isabel Hubard, Jozef Širáň, Luke Morgan, Marco Barbieri, Mima Stanojkovski, Pablo Spiga,
         Robert Jajcay, Shasha Zheng, Yanquan Feng, Dong Dong Hou, Antonio Montero, Rhys Evans, Micael Toledo, Maruša Lekše, 
         Marston Conder and Primož Potočnik. Further likely participants are Gareth Jones, Ted Dobson and Primož Šparl.
@@ -73,7 +73,7 @@
       <h2>Accommodation, transport etc.</h2>
       <p>
         Accommodation plus breakfast and either lunch or dinner will be provided, 
-        and thanks to a generous funding of the Slovenian Research and Innovation Agency (ARIS),
+        and thanks to a generous funding support by the Slovenian Research and Innovation Agency (ARIS),
         research project N1 0216, there will be no registration fee (except possibly for a workshop dinner 
         and/or other combined social activities). Of course if you have grant money you need to spend, 
         you can pay for your hotel room.
@@ -84,7 +84,7 @@
         Ljubljana airport is 66 km from Kranjska Gora, and there are regular buses and 
         shuttle/taxi services between it and Kranjska Gora. For example, a ride with the 
         "Go-Opti" shuttle service currently costs 78 Euros per person one-way, but less than 
-        that if more than one person is travelling. The closest train station is Jesenice, 
+        that if more than one person is travelling. The closest train station is Jesenice 
         (on the main line between Munich and Ljubljana or Zagreb), and it takes only 24 minutes  
         by bus from there to Kranjska Gora.
       </p>
