--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <div class="container mt-5">
 
     <div class="row mb-5">
-      <div class="col-sm-4 cardmy">
+      <div class="col-sm-4 cardmy" style="border-radius: 10px 0 0 10px;">
         <i class="fas fa-map-marker-alt fa-3x mb-3"></i>
         <h3>Where:</h3>
         <p>Kranjska Gora, <a href="https://www.hit-alpinea.si/en/accommodation/ramada-resort-kranjska-gora/">Hotel Ramada</a></p>
@@ -28,7 +28,7 @@
         <h3>When:</h3>
         <p>17–21 June 2024</p>
       </div>
-      <div class="col-sm-4 cardmy">
+      <div class="col-sm-4 cardmy" style="border-radius: 0 10px 10px 0;">
         <i class="fas fa-users fa-3x mb-3"></i>
         <h3>Organised by:</h3>
         <p> 
