--- a/index.html
+++ b/index.html
@@ -92,5 +92,9 @@
     
   </div>
 
+  <div class="container-fluid p-3 mt-5 text-white bg-dark text-center">
+    <p class="m-auto">Web design by Gregor Potočnik</p>
+  </div>
+
 </body>
 </html>
