--- a/index.html
+++ b/index.html
@@ -54,9 +54,11 @@
       <h2>Participants</h2>
       <p>
         This is an invitation-only event. So far, the following participants have confirmed attendance:
-        Binzhou Xia, Djordje Mitrović, Isabel Hubard, Jozef Širáň, Luke Morgan, Marco Barbieri, Mima Stanojkovski, Pablo Spiga,
-        Robert Jajcay, Shasha Zheng, Yanquan Feng, Dong Dong Hou, Antonio Montero, Rhys Evans, Micael Toledo, Maruša Lekše, 
-        Marston Conder and Primož Potočnik. Further likely participants are Gareth Jones, Ted Dobson and Primož Šparl.
+        Binzhou Xia, Djordje Mitrović, Isabel Hubard, Gareth Jones, 
+        Jozef Širáň, Luke Morgan, Marco Barbieri, Mima Stanojkovski, Olivia Reade,
+        Pablo Spiga, Robert Jajcay, Shasha Zheng, Yanquan Feng, Dong Dong Hou, Antonio Montero, Rhys Evans, Micael Toledo, 
+        Alejandra Ramos, Maruša Lekše, Ted Dobson, Primož Šparl,
+        Marston Conder and Primož Potočnik.
       </p>
     </div>
 
