--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <p>
         This is an invitation-only event. So far, the following participants have confirmed attendance:
         Binzhou Xia, Djordje Mitrović, Isabel Hubard, Gareth Jones, 
-        Jozef Širáň, Luke Morgan, Marco Barbieri, Mima Stanojkovski, Olivia Reade,
+        Jozef Širáň, Luke Morgan, Marco Barbieri, Kamilla Rekvényi, Mima Stanojkovski, Olivia Reade,
         Pablo Spiga, Robert Jajcay, Shasha Zheng, Yanquan Feng, Dong Dong Hou, Antonio Montero, Rhys Evans, Micael Toledo, 
         Alejandra Ramos, Maruša Lekše, Ted Dobson, Primož Šparl,
         Marston Conder and Primož Potočnik.
